  CR: Service: Added configuration file as optional program argument for startup
      Usage: devwex [start] [ini file]
  CR: SAPI: Constructors for servers support alternative signature(s)
      Server(String context, Object initialize)
      Server(String context, Initialize initialize)
  CR: Windows: Update of service-32.exe / service-64.exe (prunsrv.exe 1.3.1.0)

5.4.0 20210411
  BF: HTTP(S) Server Status: Update of class 4xx
  BF: HTTP(S) CGI: Correction of REQUEST_URI
      Without normalization/decoding (unchanged as received from the client)
  BF: HTTP(S) CGI: Correction of SCRIPT_URI / SCRIPT_URL
      Without normalization/decoding (unchanged as received from the client)
  BF: Service: Optimization / correction of Service::Print
  BF: Documentation: Update / corrections
  CR: HTTP(S) CGI: Output of the error pipe of the CGI process
  CR: HTTP(S) CGI: PATH_CONTEXT replaces PATH_ABSOLUTE (omitted)
  CR: Build: Target release replaced archive (omitted)
  CR: Windows: Integration and merge of Seanox Devwex Service project
      Maintenance, build and release of the Windows service integrated into this project.
      The implementation of the service has been completely revised.

5.3.0 20200831
  BF: HTTP(S) AccessLog: Correction in the file name of the log file (use http_host instead of remote_host)
  BF: HTTP(S) Content Types: Correction of xml/xsl/xslt to use application/xslt+xml
  BF: HTTP(S) Request: Correction of the request validation
      In some cases the request is aborted with status 400 when the network connector is busy,
      because the worker assumed that no data is being sent.
      Statuses 408 and 413 may have been overwritten with status 400.
  BF: Generator: Correction of expensive/hungry RegExp
      e.g. #[xxxxxxxxx-xxxxxxxxx-xxxxxxxxx-xxxxxxxxx]
  BF: Manual: Correction for chrome-based browsers
  CR: Manual: Improvement of the navigation
  CR: Project: Automatic update of the version in README.md