@@ -27,7 +27,7 @@
 
   INTERRUPT                   = 10                              ;interruption in milliseconds for system processes (10)
   TIMEOUT                     = 15000                           ;timeout for sockets, request, streams in milliseconds (0)
-  ISOLATION                   = 300000                          ;maximum time of the (X)CGI process in milliseconds (0)
+  ISOLATION                   = 300000                          ;maximum time of (X)CGI processes in milliseconds (0)
 
   METHODS                     = HEAD GET POST                   ;allowed methods for the server
 
